0.4.16/_sources/gallery/spherical_points.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/spherical_points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_spherical_points.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_spherical_points.py:


Spherical points
================

.. GENERATED FROM PYTHON SOURCE LINES 6-33



.. image-sg:: /gallery/images/sphx_glr_spherical_points_001.png
   :alt: spherical points
   :srcset: /gallery/images/sphx_glr_spherical_points_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import napari
    import numpy as np


    np.random.seed()

    pts = np.random.rand(100, 3) * 100
    colors = np.random.rand(100, 3)
    sizes = np.random.rand(100) * 20 + 10

    viewer = napari.Viewer(ndisplay=3)
    pts_layer = viewer.add_points(
        pts,
        face_color=colors,
        size=sizes,
        shading='spherical',
        edge_width=0,
    )

    # antialias is currently a bit broken, which is especially bad in 3D
    # we can use a private attribute for now (beware, this is not public API!)
    pts_layer._antialias = 0

    viewer.reset_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_spherical_points.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: spherical_points.py <spherical_points.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: spherical_points.ipynb <spherical_points.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
